[package]
name = "pong_macroquad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1
strip = true